Innocuous errors can occur at certain times during the execution of downloadSize() can cause initialization errors, so discard all errors incurred in this function.

BUG:265741